--- a/settings.toml
+++ b/settings.toml
@@ -1,8 +1,3 @@
 [default]
 DATABASE_URL = "mysql+mysqlconnector://marcos:1234@localhost/wallet"
-
-
-[development]
-
-
-[production]
+EXTENSIONS = ["wallet.ext.database", "wallet.blueprints.restapi"]
